--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -77,6 +77,13 @@
 @purple-dark:				darken(@purple, 25%);
 @gray-background: 			#47565b; // Blue-gray colour
 
+// Adviser colours
+@inventive-teal-light:      lighten(@inventive-teal, 5%);
+@inventive-teal-lighter:    #87c3d0;
+@inventive-pink-light:      lighten(@inventive-pink, 5%);
+@adviser-blue-gray:         #5D7678;
+@adviser-stone:             #ACAA9B;
+
 /***************************************************************************
  * NAVIGATION COLOURS
  */
