--- a/libs/jade/colours.jade
+++ b/libs/jade/colours.jade
@@ -285,3 +285,33 @@ block content
 						| @gray-8
 						br
 						| #F2F2F2
+			.row
+				.span8
+					h3 Adviser colour palette
+					p Range of colours used for adviser only content.
+			.row
+				.span3.swatch.swatch--adviser--inventive-teal-light
+					p Inventive Teal Light
+						br
+						| @inventive-teal-light
+						br
+						| #007792
+				.span3.swatch.swatch--adviser--inventive-teal-lighter
+					p Inventive Teal Lighter
+						br
+						| @inventive-teal-lighter
+						br
+						| #87C3D0
+			.row
+				.span3.swatch.swatch--adviser-blue-gray
+					p Adviser Blue Gray
+						br
+						| @adviser-blue-gray
+						br
+						| #ACAA9B
+				.span3.swatch.swatch--adviser-stone
+					p Adviser Stone
+						br
+						| @adviser-stone
+						br
+						| #5D7678
