--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -256,6 +256,11 @@ pre[class*="language-"] {
     &.swatch--mono--gray7               { background-color: @gray-7; color: @black; }
     &.swatch--mono--gray8               { background-color: @gray-8; color: @black; }
     &.swatch--mono--white               { background-color: @white; color: @black; }
+
+    &.swatch--adviser--inventive-teal-light       { background-color: @inventive-teal-light; color: @white; }
+    &.swatch--adviser--inventive-teal-lighter     { background-color: @inventive-teal-lighter; color: @text-color; }
+    &.swatch--adviser-blue-gray                   { background-color: @adviser-blue-gray; color: @white; }
+    &.swatch--adviser-stone                       { background-color: @adviser-stone; color: @white; }
 }
 
 
