Fixed merge bug in template

--- a/libs/template/toolbar.jade
+++ b/libs/template/toolbar.jade
@@ -4,8 +4,6 @@
 	a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
 	a.a-social-print(href="javascript:window.print();", data-track="Print") Print
 	a.a-social-references(href="#!", data-track="References") References
-	span.info-extent Extent
-	span.info-reviewed Reviewed
-	span.info-owner Owner	//span.info-extent Extent
+	//span.info-extent Extent
 	//span.info-reviewed Reviewed
 	//span.info-owner Owner
