--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -79,8 +79,7 @@
 
 // Adviser colours
 @inventive-teal-light:      lighten(@inventive-teal, 5%);
-@inventive-teal-lighter:    #87c3d0;
-@inventive-pink-light:      lighten(@inventive-pink, 5%);
+@inventive-teal-lighter:    #a3cfd8;
 @adviser-blue-gray:         #5D7678;
 @adviser-stone:             #ACAA9B;
 
