--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -18,5 +18,10 @@ span[id*="overlay_button"] {
 }
 
 .callout--adviser {
-    .callout;
+    .callout( 
+        @inventive-teal-lighter, 
+        @aqua-light 
+    ); 
+    .callout--border; 
+    .callout--border--left;
 }
