Adviser example pages

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -80,6 +80,7 @@
 // Adviser colours
 @inventive-teal-light:      lighten(@inventive-teal, 5%);
 @inventive-teal-lighter:    #a3cfd8;
+@inventive-teal-lightest:   lighten(@inventive-teal-lighter, 10%);
 @adviser-blue-gray:         #5D7678;
 @adviser-stone:             #ACAA9B;
 
