--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -22,12 +22,12 @@
         }
     }
     &__adviser {
-        background-color: @heritage-blue-lighter;
+        background-color: @inventive-teal-lighter;
         p a:hover {
-            border-bottom: 0.0625rem solid @heritage-blue;
+            border-bottom: 0.0625rem solid @inventive-teal-light;
         }
         .badge {
-            background-color: @heritage-blue;
+            background-color: @inventive-teal;
             color: @white;
         }
     }
