--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -43,11 +43,33 @@ html
 					p This site uses cookies. Find out more about #[a(href="#") our use of cookies].
 					button.btn.cookie-monster__close(data-action="close", type="button") Close
 
-		header.main-header
-			.main-header__content.main-content
-				a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
-					img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
-				img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
+		if loginheader
+
+			aside.section-notice__login
+				h2.screenreader Notice
+				.section-notice__content
+					button.btn.btn-small(type="button") #[a(href="adviser.html") Adviser login]
+
+		if logoutheader
+
+			aside.section-notice__login
+				h2.screenreader Notice
+				.section-notice__content
+					button.btn.btn-small(type="button")  #[a(href="adviser-logged-out.html") Adviser logout]
+
+			header.main-header
+				.main-header__content.main-content
+					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
+					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
+
+		else
+
+			header.main-header
+				.main-header__content.main-content
+					a.main-header__logo.no-print(href="index.html", title="Citizens Advice home")
+						img(alt="Citizens Advice", onerror="this.onerror=null;this.src=&#39;/Static/images/logos/ca-logo_100px.svg.png&#39;;", src="assets/images/ca-logo_100px.svg")
+					img.print-only.logo(src="assets/images/ca-logo-hz-280px.svg")
 
 		.main-container
 			nav.main-breadcrumb
