--- a/libs/jade/adviser-tool-logged-out.jade
+++ b/libs/jade/adviser-tool-logged-out.jade
@@ -24,7 +24,7 @@ block sidebar
 	- var section = "Section title"
 	// Set the number at the end to the array position of the active page
 	+sidebar([
-		{title: "Content page", href: "#"},
+		{title: "Content page", href: "adviser-logged-out.html"},
 		{title: "Advice tool", href: "adviser-tool.html"}],
 		1)
 
