--- a/libs/jade/adviser-tool-logged-out.jade
+++ b/libs/jade/adviser-tool-logged-out.jade
@@ -18,7 +18,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
 		{title: "Templates", href: "index.html#templates"},
-		{title: "Client content"}])
+		{title: "Advice Tool"}])
 
 block sidebar
 	- var section = "Section title"
