--- a/libs/jade/adviser.jade
+++ b/libs/jade/adviser.jade
@@ -19,7 +19,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
 		{title: "Templates", href: "index.html#templates"},
-		{title: "Adviser content"}])
+		{title: "Content"}])
 
 block sidebar
 	- var section = "Section title"
