--- a/libs/jade/adviser-tool.jade
+++ b/libs/jade/adviser-tool.jade
@@ -19,7 +19,7 @@ block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
 		{title: "Templates", href: "index.html#templates"},
-		{title: "Adviser content"}])
+		{title: "Advice Tool"}])
 
 block sidebar
 	- var section = "Section title"
@@ -41,12 +41,17 @@ block sidebar
 
 block content
 	div
-		h2 Use this tool to receive tailored advice 
+		h2.ref-heading
+			span.ref-heading__heading Use this tool to receive tailored advice
+			span.ref-heading__toggle.ref-heading__toggle--off
+				a.js-toggle-ref(href="#!") Add reference
+		p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat laoreet dolore magna aliquam erat volutpat.
+		.callout--adviser Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 
-		p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-
-		h3 Before you start
-
+		h3.ref-heading
+			span.ref-heading__heading Before you start
+			span.ref-heading__toggle.ref-heading__toggle--off
+				a.js-toggle-ref(href="#!") Add reference
 		ul
 			li Lorem ipsum dolor sit amet
 			li Lorem ipsum dolor sit amet
