--- a/libs/jade/callout.jade
+++ b/libs/jade/callout.jade
@@ -25,29 +25,13 @@ block content
 					h3 Callout unstyled
 					p This callout does not require an Aria tag but should be labeled with a clear heading.
 					p This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.
-					a.callout__link Callout link
+					//a.callout__link Callout link
 			pre
 				code.language-html
 					| &lt;div class="callout"&gt;
 					| 	&lt;h3&gt;Callout unstyled&lt;/h3&gt;
 					| 	&lt;p&gt;This callout does not require an Aria tag but should be labeled with a clear heading.&lt;/p&gt;
 					| 	&lt;p&gt;This style is used for any neutral callouts, where the information needs to be seperated from the content. It should also be used for examples.&lt;/p&gt;
-					| 	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
-					| &lt;/div&gt;
-
-			.example-box-plain
-				.callout--confirmation.callout--icon
-					h3 Callout confirmation
-					p This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'
-					p The icon is optional and can be including by adding the #[code .callout--icon] class.
-					a.callout__link Callout link
-			pre
-				code.language-html
-					| &lt;div class="callout--confirmation callout--icon"&gt;
-					| 	&lt;h3&gt;Callout confirmation&lt;/h3&gt;
-					| 	&lt;p&gt;This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'&lt;/p&gt;
-					| 	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
-					| 	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
 					| &lt;/div&gt;
 
 			.example-box-plain
@@ -55,44 +39,65 @@ block content
 					h3 Callout warning
 					p Use the Aria tag #[code aria-label="Important"].
 					p The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.
-					a.callout__link Callout link
+					//a.callout__link Callout link
 			pre
 				code.language-html
 					| &lt;div class="callout--warning"&gt;
 					| 	&lt;h3&gt;Callout warning&lt;/h3&gt;
 					| 	&lt;p&gt;Use the Aria tag &lt;code&gt;aria-label="Important"&lt;/code&gt;.&lt;/p&gt;
 					| 	&lt;p&gt;The warning callout should be used for any important snippet of text that has serious and/or legal implications if the client does not follow the advice.&lt;/p&gt;
-					| 	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
 					| &lt;/div&gt;
 
 			.example-box-plain
-				.callout--alert.callout--icon
+				.callout--alert
 					h3 Callout alert
 					p Use the Aria tag #[code aria-label="Help"].
 					p This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.
-					p The icon is optional and can be including by adding the #[code .callout--icon] class.
-					a.callout__link Callout link
+					//a.callout__link Callout link
+				.callout--alert.callout--icon
+					h3 Callout alert with icon
+					p The icon is optional and can be including by adding the #[code .callout--icon] class.de aria-label="Help"].
 			pre
 				code.language-html
 					| &lt;div class="callout--alert callout--icon"&gt;
 					| 	&lt;h3&gt;Callout alert&lt;/h3&gt;
 					| 	&lt;p&gt;Use the Aria tag &lt;code&gt;aria-label="Help"&lt;/code&gt;.&lt;/p&gt;
 					| 	&lt;p&gt;This callout style should be applied on information which is important and will have implications on the client if they do understand and follow the advice but it isn't mandatory and won't have legal implications they don't follow.&lt;/p&gt;
+					| &lt;/div&gt;
+					| &lt;div class="callout--alert callout--icon"&gt;
+					| 	&lt;h3&gt;Callout alert with icon&lt;/h3&gt;
 					| 	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
-					| 	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
+					| &lt;/div&gt;
+
+			.example-box-plain
+				.callout--confirmation
+					h3 Callout confirmation
+					p This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'
+				.callout--confirmation.callout--icon
+					h3 Callout confirmation with icon
+					p The icon is optional and can be including by adding the #[code .callout--icon] class.
+					//a.callout__link Callout link
+			pre
+				code.language-html
+					| &lt;div class="callout--confirmation"&gt;
+					| 	&lt;h3&gt;Callout confirmation&lt;/h3&gt;
+					| 	&lt;p&gt;This callout is used to confirm an action as correct or where the content needs to act as positive reinforcement of the informaiton i.e. 'Do apply for this if…'&lt;/p&gt;
+					| &lt;/div&gt;
+					| &lt;div class="callout--confirmation callout--icon"&gt;
+					| 	&lt;h3&gt;Callout confirmation with icon&lt;/h3&gt;
+					| 	&lt;p&gt;The icon is optional and can be including by adding the &lt;code&gt;.callout--icon&lt;/code&gt; class.&lt;/p&gt;
 					| &lt;/div&gt;
 
 			.example-box-plain
 				.callout--quote
 					h3 Callout quote
 					p Also referred to as Blockquote, this style is when a quote needs to be displayed.
-					a.callout__link Callout link
+					//a.callout__link Callout link
 			pre
 				code.language-html
 					| &lt;div class="callout--quote"&gt;
 					| 	&lt;h3&gt;Callout quote&lt;/h3&gt;
 					| 	&lt;p&gt;Also referred to as Blockquote, this style is when a quote needs to be displayed.&lt;/p&gt;
-					| 	&lt;a class="callout__link"&gt;Callout link&lt;/a&gt;
 					| &lt;/div&gt;
 
 			h2 Callouts combined
