- Added correct syntax beneath field groups - Added individual classes for field group types - Improvements to the css of field groups

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -355,52 +355,98 @@ input[class*="dob-"] {
 }
 
 .field-group {
-    display: inline-table;
-    white-space: nowrap;
-    width: 100%;
-    label,
-    input,
-    button {
-        display: inline-block;
-        width: auto;
-        margin-right: 0;
-        border-radius: 0;
-    }
-    input[type="number"] {
-        border-radius: 0;
-        border-right: 0;
-        width: 25%;
-    }
-    label {
-        width: 25%;
-        padding: @box-spacing-vertical 0;
-        text-align: center;
-        input {
-            margin-right: .25em;
-        }
-        input:before {
+    &--buttons {
+        display: inline-table;
+        white-space: nowrap;
+        width: 100%;
+        label,
+        input,
+        button {
+            display: inline-block;
+            width: auto;
+            margin-right: 0;
             border-radius: 0;
-            border-width: 1px 0;
         }
-        &:last-child input:before {
+        input {
+            border-radius: 0;
+            border-right: 0;
+            width: 25%;
+        }
+        button {
+            width: 25%;
+            padding: @box-spacing-vertical 0;
+        }
+        input:first-of-type {
+            border-radius: @form-border-radius 0 0 @form-border-radius;
+        }
+        *:last-child {
             border-radius: 0 @form-border-radius @form-border-radius 0;
-            border-right-width: 1px;
         }
     }
-    button {
-        width: 25%;
-        padding: @box-spacing-vertical 0;
+    &--dropdown {
+        display: inline-table;
+        white-space: nowrap;
+        width: 100%;
+        input {
+            border-radius: 0;
+            border-right: 0;
+            width: 65%;
+        }
+        .dropdown {
+            width: 35%;
+            display: inline-block;
+            border-radius: 0 @form-border-radius @form-border-radius 0;
+        }
+        input:first-of-type {
+            border-radius: @form-border-radius 0 0 @form-border-radius;
+        }
+        *:last-child {
+            border-radius: 0 @form-border-radius @form-border-radius 0;
+        }
     }
-    .dropdown {
-        width: 75%;
-        display: inline-block;
-        border-radius: 0 @form-border-radius @form-border-radius 0;
-    }
-    input:first-of-type {
-        border-radius: @form-border-radius 0 0 @form-border-radius;
-    }
-    *:last-child {
-        border-radius: 0 @form-border-radius @form-border-radius 0;
+    &--radio {
+        display: inline-table;
+        white-space: nowrap;
+        width: 100%;
+        label,
+        input,
+        button {
+            display: inline-block;
+            width: auto;
+            margin-right: 0;
+            border-radius: 0;
+        }
+        input[type="number"] {
+            border-radius: 0;
+            border-right: 0;
+            width: 25%;
+        }
+        label {
+            width: 25%;
+            padding: @box-spacing-vertical 0;
+            text-align: center;
+            input {
+                margin-right: .25em;
+            }
+            input:before {
+                border-radius: 0;
+                border-width: 1px 0;
+            }
+            &:last-child input:before {
+                border-radius: 0 @form-border-radius @form-border-radius 0;
+                border-right-width: 1px;
+            }
+        }
+        button {
+            width: 25%;
+            padding: @box-spacing-vertical 0;
+        }
+        input:first-of-type {
+            border-radius: @form-border-radius 0 0 @form-border-radius;
+        }
+        *:last-child {
+            border-radius: 0 @form-border-radius @form-border-radius 0;
+        }
     }
 }
 
