--- a/libs/jade/fields.jade
+++ b/libs/jade/fields.jade
@@ -18,63 +18,6 @@ block content
 				p Only ask for the minimum amount of information for the client to complete the task required, this means that forms are kept shorter, improving completion rate and also trust. Any fields which are optional should be indicated as such.
 				h3 Examples of form components
 				p Using a field for a persons full name is recommended when possible, different cultures structure names in different ways and a Firstname, Surname approach isn't always appropriate.
-				.example-box-plain
-					fieldset
-						label(for="field") Field group
-						.field-group
-							input#field(placeholder="£", type="number")
-							button.btn Week
-							button.btn Month
-							button.btn Year
-				pre
-					code.language-html
-						| &lt;fieldset&gt;
-						| 	&lt;label for="standardField"&gt;Standard field&lt;/label&gt;
-						| 	&lt;input id="standardField" placeholder="" type="text"&gt;
-						| &lt;/fieldset&gt;
-
-				.example-box-plain
-					fieldset
-						label(for="field") Field group
-						.field-group
-							input#field(placeholder="£", type="number")
-							.dropdown
-								select#exampleSelect1
-									option Daily
-									option 2
-									option 3
-									option 4
-									option 5
-				pre
-					code.language-html
-						| &lt;fieldset&gt;
-						| 	&lt;label for="standardField"&gt;Standard field&lt;/label&gt;
-						| 	&lt;input id="standardField" placeholder="" type="text"&gt;
-						| &lt;/fieldset&gt;
-
-				.example-box-plain
-				fieldset
-					label(for="field") Field group
-					.field-group
-						input#field(placeholder="£", type="number")
-						label.radio.radio--inline
-							input(checked name="radio-inline", type="radio", value="option1")
-							| Week
-						label.radio.radio--inline
-							input(name="radio-inline", type="radio", value="option2")
-							| Month
-						label.radio.radio--inline
-							input(name="radio-inline", type="radio", value="option3")
-							| Year
-				pre
-					code.language-html
-						| &lt;fieldset&gt;
-						| 	&lt;label for="standardField"&gt;Standard field&lt;/label&gt;
-						| 	&lt;input id="standardField" placeholder="" type="text"&gt;
-						| &lt;/fieldset&gt;
-
-
-
 
 				.example-box-plain
 					fieldset
@@ -167,34 +110,6 @@ block content
 						| 			&lt;option&gt;4&lt;/option&gt;
 						| 			&lt;option&gt;5&lt;/option&gt;
 						| 		&lt;/select&gt;
-						| 	&lt;/div&gt;
-						| &lt;/fieldset&gt;
-
-				.example-box-plain
-					fieldset
-						.form-group-date
-							label(for="dob-day") Day
-							input#dob-day(max="31", min="1", placeholder="DD", type="number")
-						.form-group-date
-							label(for="dob-month") Month
-							input#dob-month(max="12", min="1", placeholder="MM", type="number")
-						.form-group-date
-							label(for="dob-year") Year
-							input#dob-year(max="2100", placeholder="YYYY", type="number")
-				pre
-					code.language-html
-						| &lt;fieldset&gt;
-						| 	&lt;div class="form-group-date"&gt;
-						| 		&lt;label for="dob-day"&gt;Day&lt;/label&gt;
-						| 		&lt;input id="dob-day" max="31" min="1" placeholder="DD" type="number"&gt;
-						| 	&lt;/div&gt;
-						| 	&lt;div class="form-group-date"&gt;
-						| 		&lt;label for="dob-month"&gt;Month&lt;/label&gt;
-						| 		&lt;input id="dob-month" max="12" min="1" placeholder="MM" type="number"&gt;
-						| 	&lt;/div&gt;
-						| 	&lt;div class="form-group-date"&gt;
-						| 		&lt;label for="dob-year"&gt;Year&lt;/label&gt;
-						| 		&lt;input id="dob-year" max="2100" placeholder="YYYY" type="number"&gt;
 						| 	&lt;/div&gt;
 						| &lt;/fieldset&gt;
 
@@ -440,4 +355,112 @@ block content
 						| 			&lt;span&gt;No&lt;/span&gt;&lt;br&gt;I'm not in any situation
 						| 		&lt;/p&gt;
 						| 	&lt;/label&gt;
+						| &lt;/fieldset&gt;
+
+				h2 Field groups
+
+				.example-box-plain
+					fieldset
+						.form-group-date
+							label(for="dob-day") Day
+							input#dob-day(max="31", min="1", placeholder="DD", type="number")
+						.form-group-date
+							label(for="dob-month") Month
+							input#dob-month(max="12", min="1", placeholder="MM", type="number")
+						.form-group-date
+							label(for="dob-year") Year
+							input#dob-year(max="2100", placeholder="YYYY", type="number")
+				pre
+					code.language-html
+						| &lt;fieldset&gt;
+						| 	&lt;div class="form-group-date"&gt;
+						| 		&lt;label for="dob-day"&gt;Day&lt;/label&gt;
+						| 		&lt;input id="dob-day" max="31" min="1" placeholder="DD" type="number"&gt;
+						| 	&lt;/div&gt;
+						| 	&lt;div class="form-group-date"&gt;
+						| 		&lt;label for="dob-month"&gt;Month&lt;/label&gt;
+						| 		&lt;input id="dob-month" max="12" min="1" placeholder="MM" type="number"&gt;
+						| 	&lt;/div&gt;
+						| 	&lt;div class="form-group-date"&gt;
+						| 		&lt;label for="dob-year"&gt;Year&lt;/label&gt;
+						| 		&lt;input id="dob-year" max="2100" placeholder="YYYY" type="number"&gt;
+						| 	&lt;/div&gt;
+						| &lt;/fieldset&gt;
+
+				.example-box-plain
+					fieldset
+						label(for="field") Field group with buttons
+						.field-group--buttons
+							input#field(placeholder="£", type="number")
+							button.btn Week
+							button.btn Month
+							button.btn Year
+				pre
+					code.language-html
+						| &lt;fieldset&gt;
+						| 	&lt;label for="field"&gt;Field group with buttons&lt;/label&gt;
+						| 	&lt;div class="field-group"&gt;
+						| 		&lt;input id="field" placeholder="£" type="number"&gt;
+						| 		&lt;button class="btn"&gt;Week&lt;/button&gt;
+						| 		&lt;button class="btn"&gt;Month&lt;/button&gt;
+						| 		&lt;button class="btn"&gt;Year&lt;/button&gt;
+						| 	&lt;/div&gt;
+						| &lt;/fieldset&gt;
+
+				.example-box-plain
+					fieldset
+						label(for="field") Field group with dropdown
+						.field-group--dropdown
+							input#field(placeholder="£", type="number")
+							.dropdown
+								select#exampleSelect1
+									option Daily
+									option Monthly
+									option Yearly
+				pre
+					code.language-html
+						| &lt;fieldset&gt;
+						| 	&lt;label for="field"&gt;Field group with dropdown&lt;/label&gt;
+						| 	&lt;div class="field-group--dropdown"&gt;
+						| 		&lt;input id="field" placeholder="£" type="number"&gt;
+						| 		&lt;div class="dropdown"&gt;
+						| 			&lt;select id="exampleSelect1"&gt;
+						| 				&lt;option&gt;Daily&lt;/option&gt;
+						| 				&lt;option&gt;Monthly&lt;/option&gt;
+						| 				&lt;option&gt;Yearly&lt;/option&gt;
+						| 			&lt;/select&gt;
+						| 		&lt;/div&gt;
+						| 	&lt;/div&gt;
+						| &lt;/fieldset&gt;
+
+				.example-box-plain
+					fieldset
+						label(for="field") Field group with radio buttons
+						.field-group--radio
+							input#field(placeholder="£", type="number")
+							label.radio.radio--inline
+								input(checked name="radio-inline", type="radio", value="option1")
+								| Week
+							label.radio.radio--inline
+								input(name="radio-inline", type="radio", value="option2")
+								| Month
+							label.radio.radio--inline
+								input(name="radio-inline", type="radio", value="option3")
+								| Year
+				pre
+					code.language-html
+						| &lt;fieldset&gt;
+						| 	&lt;label for="field"&gt;Field group with radio buttons&lt;/label&gt;
+						| 	&lt;div class="field-group--radio"&gt;
+						| 		&lt;input id="field" placeholder="£" type="number"&gt;
+						| 		&lt;label class="radio radio--inline"&gt;
+						| 			&lt;input checked="" name="radio-inline" type="radio" value="option1"&gt;Week
+						| 		&lt;/label&gt;
+						| 		&lt;label class="radio radio--inline"&gt;
+						| 			&lt;input name="radio-inline" type="radio" value="option2"&gt;Month
+						| 		&lt;/label&gt;
+						| 		&lt;label class="radio radio--inline"&gt;
+						| 			&lt;input name="radio-inline" type="radio" value="option3"&gt;Year
+						| 		&lt;/label&gt;
+						| 	&lt;/div&gt;
 						| &lt;/fieldset&gt;
