--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -129,7 +129,7 @@ ol li, ul li {
     color: #333;
     padding: 20px;
     margin: 1em 0 0 0;
-    line-height: 1.7em;
+    //line-height: 1.7em;
     border: 1px solid #dfe1e3;
     border-radius: @form-border-radius @form-border-radius 0 0;
     border-bottom: 0;
