Moved field groups into their own page

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -33,6 +33,8 @@ block content
 								a(href="buttons.html") Buttons
 							li
 								a(href="fields.html") Fields
+							li
+								a(href="field-groups.html") Field groups
 					li 
 						h4#grid Grid
 						ul
