Changed var title to an if else statement in the template. This allows you to simply leave out the variable for pages without titles.

--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -80,9 +80,10 @@ html
 			.main-content
 				if sidebar
 					main.main-content__right(id="main", role="main")
-						.title
-							h1.title__heading.js-ref
-								span.title__title #{title}
+						if title
+							.title
+								h1.title__heading.js-ref
+									span.title__title #{title}
 						if toolbars
 							include toolbar.jade
 							block content
