Fix to .btn-small mixin that was causing the wrong border colour on hover

--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -43,5 +43,6 @@
 
     &:hover, &:active, &:focus  {
         background-color: @btn-small-background-hover;
+        border: 1px solid @btn-small-border;
     }
 }
